--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<!-- End Preloader Area -->
 
 		<!-- Chat with us -->
-		<link rel="stylesheet" href="/assets/css/chat-bot.css" />
+		<link rel="stylesheet" href="./assets/css/chat-bot.css" />
 		<div id="whatsapp-chat" class="hide">
 			<div class="whatsapp-chat-header" style="color: #fff">
 				<div class="whatsapp-chat-avatar">
