--- a/index.html
+++ b/index.html
@@ -304,8 +304,11 @@
 					<div class="main-responsive-menu">
 						<div class="logo">
 							<a
-								href="index.html"
-								style="font-size: 2rem"
+								style="
+									color: #2ad396;
+									font-size: 2rem;
+									font-weight: 500;
+								"
 								class="navbar-brand"
 								href="index.html">
 								CHILDDR
