--- a/index.html
+++ b/index.html
@@ -320,14 +320,13 @@
 							<a
 								style="
 									color: #2ad396;
-									font-size: 2rem;
+									font-size: 1rem;
 									font-weight: 900;
 								"
 								class="navbar-brand"
 								href="index.html">
 								CHILDDR
 							</a>
-
 							<div
 								class="collapse navbar-collapse mean-menu"
 								id="navbarSupportedContent">
@@ -335,13 +334,11 @@
 									<li class="nav-item">
 										<a href="#" class="nav-link"> Home </a>
 									</li>
-
 									<li class="nav-item">
 										<a href="#" class="nav-link">
 											Doctors
 											<i class="bx bx-chevron-down"></i>
 										</a>
-
 										<ul class="dropdown-menu">
 											<li class="nav-item">
 												<a href="#" class="nav-link">
@@ -349,7 +346,6 @@
 													<i
 														class="bx bx-chevron-down"></i>
 												</a>
-
 												<ul class="dropdown-menu">
 													<li class="nav-item">
 														<a
@@ -358,7 +354,6 @@
 															Dashboard
 														</a>
 													</li>
-
 													<li class="nav-item">
 														<a
 															href="appointments.html"
@@ -366,7 +361,6 @@
 															Appointments
 														</a>
 													</li>
-
 													<li class="nav-item">
 														<a
 															href="patients.html"
@@ -374,7 +368,6 @@
 															Patients
 														</a>
 													</li>
-
 													<li class="nav-item">
 														<a
 															href="schedule-time.html"
@@ -382,7 +375,6 @@
 															Schedule Time
 														</a>
 													</li>
-
 													<li class="nav-item">
 														<a
 															href="invoices.html"
@@ -390,7 +382,6 @@
 															Invoices
 														</a>
 													</li>
-
 													<li class="nav-item">
 														<a
 															href="reviews.html"
@@ -398,7 +389,6 @@
 															Reviews
 														</a>
 													</li>
-
 													<li class="nav-item">
 														<a
 															href="change-password.html"
@@ -406,7 +396,6 @@
 															Change Password
 														</a>
 													</li>
-
 													<li class="nav-item">
 														<a
 															href="login.html"
@@ -416,7 +405,6 @@
 													</li>
 												</ul>
 											</li>
-
 											<li class="nav-item">
 												<a
 													href="doctors.html"
@@ -424,7 +412,6 @@
 													Doctors
 												</a>
 											</li>
-
 											<li class="nav-item">
 												<a
 													href="doctors-details.html"
@@ -434,13 +421,11 @@
 											</li>
 										</ul>
 									</li>
-
 									<li class="nav-item">
 										<a href="#" class="nav-link">
 											Pages
 											<i class="bx bx-chevron-down"></i>
 										</a>
-
 										<ul class="dropdown-menu">
 											<li class="nav-item">
 												<a
@@ -449,7 +434,6 @@
 													About
 												</a>
 											</li>
-
 											<li class="nav-item">
 												<a
 													href="pricing.html"
@@ -457,7 +441,6 @@
 													Pricing
 												</a>
 											</li>
-
 											<li class="nav-item">
 												<a
 													href="testimonials.html"
@@ -465,7 +448,6 @@
 													Testimonials
 												</a>
 											</li>
-
 											<li class="nav-item">
 												<a
 													href="gallery.html"
@@ -473,7 +455,6 @@
 													Gallery
 												</a>
 											</li>
-
 											<li class="nav-item">
 												<a
 													href="my-account.html"
@@ -481,14 +462,12 @@
 													My Account
 												</a>
 											</li>
-
 											<li class="nav-item">
 												<a href="#" class="nav-link">
 													Shop
 													<i
 														class="bx bx-chevron-down"></i>
 												</a>
-
 												<ul class="dropdown-menu">
 													<li class="nav-item">
 														<a
@@ -497,7 +476,6 @@
 															Shop
 														</a>
 													</li>
-
 													<li class="nav-item">
 														<a
 															href="cart.html"
@@ -505,7 +483,6 @@
 															Cart
 														</a>
 													</li>
-
 													<li class="nav-item">
 														<a
 															href="checkout.html"
@@ -513,7 +490,6 @@
 															Checkout
 														</a>
 													</li>
-
 													<li class="nav-item">
 														<a
 															href="products-details.html"
@@ -523,7 +499,6 @@
 													</li>
 												</ul>
 											</li>
-
 											<li class="nav-item">
 												<a
 													href="faq.html"
@@ -531,7 +506,6 @@
 													FAQ
 												</a>
 											</li>
-
 											<li class="nav-item">
 												<a
 													href="error-404.html"
@@ -539,7 +513,6 @@
 													Error Page
 												</a>
 											</li>
-
 											<li class="nav-item">
 												<a
 													href="terms-of-service.html"
@@ -547,7 +520,6 @@
 													Terms of Service
 												</a>
 											</li>
-
 											<li class="nav-item">
 												<a
 													href="privacy-policy.html"
@@ -555,7 +527,6 @@
 													Privacy Policy
 												</a>
 											</li>
-
 											<li class="nav-item">
 												<a
 													href="coming-soon.html"
@@ -565,13 +536,11 @@
 											</li>
 										</ul>
 									</li>
-
 									<li class="nav-item">
 										<a href="#" class="nav-link">
 											Patient
 											<i class="bx bx-chevron-down"></i>
 										</a>
-
 										<ul class="dropdown-menu">
 											<li class="nav-item">
 												<a
@@ -580,7 +549,6 @@
 													Dashboard
 												</a>
 											</li>
-
 											<li class="nav-item">
 												<a
 													href="favorite-doctors.html"
@@ -588,7 +556,6 @@
 													Favorite Doctors
 												</a>
 											</li>
-
 											<li class="nav-item">
 												<a
 													href="submit-review.html"
@@ -596,7 +563,6 @@
 													Submit Review
 												</a>
 											</li>
-
 											<li class="nav-item">
 												<a
 													href="book-appointment.html"
@@ -604,7 +570,6 @@
 													Book Appointment
 												</a>
 											</li>
-
 											<li class="nav-item">
 												<a
 													href="register.html"
@@ -614,13 +579,11 @@
 											</li>
 										</ul>
 									</li>
-
 									<li class="nav-item">
 										<a href="#" class="nav-link">
 											Services
 											<i class="bx bx-chevron-down"></i>
 										</a>
-
 										<ul class="dropdown-menu">
 											<li class="nav-item">
 												<a
@@ -629,7 +592,6 @@
 													Services
 												</a>
 											</li>
-
 											<li class="nav-item">
 												<a
 													href="services-details.html"
@@ -639,13 +601,11 @@
 											</li>
 										</ul>
 									</li>
-
 									<li class="nav-item">
 										<a href="#" class="nav-link">
 											Blog
 											<i class="bx bx-chevron-down"></i>
 										</a>
-
 										<ul class="dropdown-menu">
 											<li class="nav-item">
 												<a
@@ -654,7 +614,6 @@
 													Blog
 												</a>
 											</li>
-
 											<li class="nav-item">
 												<a
 													href="blog-details.html"
@@ -664,7 +623,6 @@
 											</li>
 										</ul>
 									</li>
-
 									<li class="nav-item">
 										<a href="contact.html" class="nav-link">
 											Contact
@@ -681,36 +639,41 @@
 											></label>
 										</div>
 									</li>
+									<li class="nav-item">
+										<div class="nav-link mt-2 switch-box1">
+											<style>
+												.call-icon {
+													text-decoration: none;
+													font-size: 22px;
+												}
+											</style>
+												<div
+													class="others-options d-flex align-items-center">
+													<div class="call-icon option-item">
+														<i
+															class="bx bxs-phone" style="
+															color: #2ad396;
+															font-size: 2rem;
+															padding-right: 10px;
+															font-weight: 500;
+														"></i>
+													</div>
+													<div class="icon-box icon-box-body">
+														<span
+															class="title"
+															style="
+																color: #2ad396;
+																font-size: 1rem;
+																font-weight: 500;
+															">
+															Consult With Doctor
+															<p>(555)-085-2750</p>
+														</span>
+													</div>
+												</div>
+										</div>
+									</li>
 								</ul>
-								<style>
-									.call-icon {
-										margin: 10px;
-										text-decoration: none;
-										padding: 10px;
-										font-size: 22px;
-									}
-								</style>
-								<a href="">
-									<div
-										class="others-options d-flex align-items-center">
-										<div class="call-icon option-item">
-											<i
-												class="fas fa-phone fa-rotate-90"></i>
-										</div>
-										<div class="icon-box icon-box-body">
-											<span
-												class="title"
-												style="
-													color: #2ad396;
-													font-size: 1.3rem;
-													font-weight: 500;
-												">
-												Consult With Doctor
-												<p>(555)-085-2750</p>
-											</span>
-										</div>
-									</div>
-								</a>
 							</div>
 						</nav>
 					</div>
@@ -729,14 +692,27 @@
 
 					<div class="container">
 						<div class="option-inner">
-							<div
-								class="others-options d-flex align-items-center">
-								<div class="option-item">
-									<a href="#" class="default-btn">
-										Consult with doctor</a
-									>
+							<a href="#">
+								<div
+									class="others-options d-flex align-items-center">
+									<div class="call-icon option-item">
+										<i
+											class="fas fa-phone fa-rotate-90"></i>
+									</div>
+									<div class="icon-box icon-box-body">
+										<span
+											class="title"
+											style="
+												color: #2ad396;
+												font-size: 1.3rem;
+												font-weight: 500;
+											">
+											Consult With Doctor
+											<p>(555)-085-2750</p>
+										</span>
+									</div>
 								</div>
-							</div>
+							</a>
 						</div>
 					</div>
 				</div>
