--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 							<a
 								style="
 									color: #2ad396;
-									font-size: 2rem;
+									font-size: 1.4rem;
 									font-weight: 500;
 								"
 								class="navbar-brand"
@@ -320,7 +320,7 @@
 							<a
 								style="
 									color: #2ad396;
-									font-size: 1rem;
+									font-size: 1.4rem;
 									font-weight: 900;
 								"
 								class="navbar-brand"
@@ -647,30 +647,33 @@
 													font-size: 22px;
 												}
 											</style>
+											<div
+												class="others-options d-flex align-items-center">
 												<div
-													class="others-options d-flex align-items-center">
-													<div class="call-icon option-item">
-														<i
-															class="bx bxs-phone" style="
+													class="call-icon option-item">
+													<i
+														class="bx bxs-phone"
+														style="
 															color: #2ad396;
 															font-size: 2rem;
 															padding-right: 10px;
 															font-weight: 500;
 														"></i>
-													</div>
-													<div class="icon-box icon-box-body">
-														<span
-															class="title"
-															style="
-																color: #2ad396;
-																font-size: 1rem;
-																font-weight: 500;
-															">
-															Consult With Doctor
-															<p>(555)-085-2750</p>
-														</span>
-													</div>
 												</div>
+												<div
+													class="icon-box icon-box-body">
+													<span
+														class="title"
+														style="
+															color: #2ad396;
+															font-size: 1rem;
+															font-weight: 500;
+														">
+														Consult With Doctor
+														<p>(555)-085-2750</p>
+													</span>
+												</div>
+											</div>
 										</div>
 									</li>
 								</ul>
@@ -692,27 +695,24 @@
 
 					<div class="container">
 						<div class="option-inner">
-							<a href="#">
-								<div
-									class="others-options d-flex align-items-center">
-									<div class="call-icon option-item">
-										<i
-											class="fas fa-phone fa-rotate-90"></i>
-									</div>
-									<div class="icon-box icon-box-body">
-										<span
-											class="title"
-											style="
-												color: #2ad396;
-												font-size: 1.3rem;
-												font-weight: 500;
-											">
-											Consult With Doctor
-											<p>(555)-085-2750</p>
-										</span>
-									</div>
+							<div
+								class="others-options d-flex align-items-center">
+								<div class="call-icon option-item">
+									<i class="fas fa-phone fa-rotate-90"></i>
 								</div>
-							</a>
+								<div class="icon-box icon-box-body">
+									<span
+										class="title"
+										style="
+											color: #2ad396;
+											font-size: 1.4rem;
+											font-weight: 700;
+										">
+										Consult With Doctor
+										<p>(555)-085-2750</p>
+									</span>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -2193,7 +2193,7 @@
 							<a
 								style="
 									color: #2ad396;
-									font-size: 2rem;
+									font-size: 1.4rem;
 									font-weight: 500;
 								"
 								class="navbar-brand"
