--- a/index.html
+++ b/index.html
@@ -147,43 +147,24 @@
 		<!-- 
 			socail icoon
 		-->
-		<link
-			rel="stylesheet"
-			href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
-
-		<link
-			rel="stylesheet"
-			href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
 			integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
 			crossorigin="anonymous" />
-		<!--Start Sticky Icon-->
-		<div class="sticky-icon">
-			<a href="https://www.instagram.com/?hl=en" class="Instagram"
-				><i class="fab fa-instagram"></i> Instagram
-			</a>
-			<a href="https://www.facebook.com/" class="Facebook"
-				><i class="fab fa-facebook-f"> </i> Facebook
-			</a>
-			<a href="https://www.youtube.com/" class="Youtube"
-				><i class="fab fa-youtube"></i> Youtube
-			</a>
-			<a href="https://twitter.com/login" class="Twitter"
-				><i class="fab fa-twitter"> </i> Twitter
-			</a>
-		</div>
 		<style>
 			.sticky-icon {
 				z-index: 9999;
 				position: fixed;
 				top: 25%;
-				right: 0%;
+				right: 0;
 				width: 220px;
 				display: flex;
 				flex-direction: column;
+				align-items: flex-end; /* Align the icons to the right */
 			}
+	
 			.sticky-icon a {
-				transform: translate(160px, 0px);
-				border-radius: 50px 0px 0px 50px;
+				border-radius: 50px 0 0 50px;
 				text-align: left;
 				margin: 2px;
 				text-decoration: none;
@@ -192,40 +173,44 @@
 				font-size: 22px;
 				font-family: "Oswald", sans-serif;
 				transition: all 0.8s;
+				display: flex;
+				align-items: center; /* Align text and icon vertically */
 			}
+	
 			.sticky-icon a:hover {
 				color: #fff;
-				transform: translate(0px, 0px);
+				transform: translateX(0);
 			}
+	
 			.sticky-icon a:hover i {
 				transform: rotate(360deg);
 			}
-			/*.search_icon a:hover i  {
-	transform:rotate(360deg);}*/
+	
 			.Facebook {
 				background-color: #2c80d3;
 				color: #fff;
 			}
-
+	
 			.Youtube {
 				background-color: #fa0910;
 				color: #fff;
 			}
-
+	
 			.Twitter {
 				background-color: #53c5ff;
 				color: #fff;
 			}
-
+	
 			.Instagram {
 				background-color: #fd1d1d;
 				color: #fff;
 			}
-
+	
 			.Google {
 				background-color: #d34836;
 				color: #fff;
 			}
+	
 			.sticky-icon a i {
 				background-color: #fff;
 				height: 40px;
@@ -234,36 +219,34 @@
 				text-align: center;
 				line-height: 40px;
 				border-radius: 50%;
-				margin-right: 20px;
 				transition: all 0.5s;
 			}
+	
 			.sticky-icon a i.fa-facebook-f {
 				background-color: #fff;
 				color: #2c80d3;
 			}
-
+	
 			.sticky-icon a i.fa-google-plus-g {
 				background-color: #fff;
 				color: #d34836;
 			}
-
+	
 			.sticky-icon a i.fa-instagram {
 				background-color: #fff;
 				color: #fd1d1d;
 			}
-
+	
 			.sticky-icon a i.fa-youtube {
 				background-color: #fff;
 				color: #fa0910;
 			}
-
+	
 			.sticky-icon a i.fa-twitter {
 				background-color: #fff;
 				color: #53c5ff;
 			}
-			.fas fa-shopping-cart {
-				background-color: #fff;
-			}
+	
 			#myBtn {
 				height: 50px;
 				display: none;
@@ -273,7 +256,6 @@
 				z-index: 99;
 				text-align: center;
 				padding: 10px;
-				text-align: center;
 				line-height: 40px;
 				border: none;
 				outline: none;
@@ -282,15 +264,47 @@
 				cursor: pointer;
 				border-radius: 50%;
 			}
+	
 			.fa-arrow-circle-up {
 				font-size: 30px;
 			}
-
+	
 			#myBtn:hover {
 				background-color: #555;
 			}
 		</style>
-		<!--End Sticky Icon-->
+	</head>
+	<body>
+		<!-- Start Sticky Icon -->
+		<div class="sticky-icon">
+			<a href="https://www.instagram.com/?hl=en" class="Instagram">
+				<i class="fab fa-instagram"></i>
+			</a>
+			<a href="https://www.facebook.com/" class="Facebook">
+				<i class="fab fa-facebook-f"></i>
+			</a>
+			<a href="https://www.youtube.com/" class="Youtube">
+				<i class="fab fa-youtube"></i>
+			</a>
+			<a href="https://twitter.com/login" class="Twitter">
+				<i class="fab fa-twitter"></i>
+			</a>
+		</div>
+		<!-- End Sticky Icon -->
+	
+		<!-- Your content here -->
+	
+		<button onclick="topFunction()" id="myBtn" title="Go to top">
+			<i class="fas fa-arrow-circle-up"></i>
+		</button>
+	
+		<script>
+			// Function to scroll to the top of the page
+			function topFunction() {
+				document.body.scrollTop = 0;
+				document.documentElement.scrollTop = 0;
+			}
+		</script>
 
 		<!-- Start Navbar Area -->
 		<div class="navbar-area">
@@ -743,7 +757,6 @@
 											</p>
 										</div>
 										<style>
-											
 											/* GENERAL BUTTON STYLING */
 											button,
 											button::after {
@@ -764,7 +777,6 @@
 											button:hover {
 												color: #2ecc71;
 											}
-
 
 											/* BUTTON 3 */
 											.btn-3::after {
@@ -787,40 +799,36 @@
 												<div class="row">
 													<div
 														class="col-lg-5 col-md-6">
-														<div
-															class="form-group green-btn">
+														<div class="form-group">
 															<label
-																style="
-																	color: #fff;
-																"
-																><i
-																	class="flaticon-doctor-2"></i
-															></label>
-															<button type="button"
-															class="form-control button default-btn" 
-															value="Contact Us">Contact Us</button>
+																class="contact-us-icon">
+																<i
+																	class="icon flaticon-doctor-2">
+																</i>
+															</label>
+															<button
+																type="button"
+																class="contact-us-btn btn default-btn"
+																value="Contact Us">
+																Contact Us
+															</button>
 														</div>
 													</div>
 
 													<div
-														class="doctor-btn col-lg-7 col-md-6">
-														<div class="form-group">
+														class="col-lg-7 col-md-6">
+														<div
+															class="form-group">
 															<label
+																class="contact-us-icon"
 																><i
-																	class="flaticon-calendar"></i
+																	class="icon flaticon-calendar"></i
 															></label>
-															<input
+															<button
 																type="button"
-																value="Book Appointment"
-																class="form-control btn default-btn"
-																style="
-																	color: #2ad396;
-																	font-weight: 900;
-																	border: 2px
-																		solid
-																		#2ad396;
-																	background-color: transparent;
-																" />
+																class="form-control btn default-btn">
+																Book Appointment
+															</button>
 														</div>
 													</div>
 												</div>
